--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "devDependencies": {
-    "@types/sizzle": "^2.3.2",
     "copy-webpack-plugin": "^5.0.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {
-    "sizzle": "^2.3.4"
-  }
+  "dependencies": {}
 }
